<resources>
    <string name="app_name">Image bucket App</string>
    <string name="search_image">search Image here.</string>
    <string name="retrieve">retrieve</string>
    <string name="upload">upload</string>
    <string name="select_image">Select Image</string>
    <string name="image_view">image_view</string>
    <string name="open_album">Open Album</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_not_granted">App requires access to storage to access items stored in gallery.</string>
</resources>