<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
    <variable
        name="viewModel"
        type="com.example.imagebucketapp.ui.MainViewModel" />
</data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/welcome_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <EditText
                        android:id="@+id/searchImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:layout_marginTop="@dimen/margin_20"
                        android:background="@color/search_box_bg"
                        android:drawableEnd="@drawable/ic_search"
                        android:drawablePadding="@dimen/padding_search_box"
                        android:hint="@string/search_image"
                        android:imeOptions="actionSearch"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:padding="@dimen/padding_search_box"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white" />

                    <Button
                        android:id="@+id/selectImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:layout_marginTop="@dimen/margin_20"
                        android:text="@string/select_image" />

                    <Button
                        android:id="@+id/uploadImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:layout_marginTop="@dimen/margin_20"
                        android:text="@string/upload" />

                    <Button
                        android:id="@+id/retrieveImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:layout_marginTop="@dimen/margin_20"
                        android:text="@string/retrieve" />

                    <ImageView
                        android:id="@+id/imgView"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_margin="@dimen/margin_30"
                        android:contentDescription="@string/image_view"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/ic_launcher_background" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/permission_rationale_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/permission_required_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="72dp"
                        android:layout_marginEnd="72dp"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:text="@string/permission_not_granted" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/grant_permission_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/grant_permission" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </RelativeLayout>
</layout>